1.0.8 fix: removed text-decoration/align from dropdown.core

--- a/src/css/a11y-dropdown.core.css
+++ b/src/css/a11y-dropdown.core.css
@@ -90,9 +90,7 @@
 [data-dropdown-item] {
     display: block;
     width: 100%;
-    text-align: left;
     cursor: pointer;
-    text-decoration: none;
 }
 
 /* Divider */
